Fixed some layout issues, cleaned up stylesheet linking.

--- a/hva_som_skjer/wwwroot/css/site.css
+++ b/hva_som_skjer/wwwroot/css/site.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿html {
+    overflow-y: scroll;
+}
+
+body {
     padding-top: 0px;
     padding-bottom: 20px;
 }
